--- a/src/config/database.yml
+++ b/src/config/database.yml
@@ -19,7 +19,7 @@ default: &default
 
 development:
   <<: *default
-  database: app_development
+  database: koshimaru_sample
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
